--- a/src/app/page/our-story/our-story.component.html
+++ b/src/app/page/our-story/our-story.component.html
@@ -2,14 +2,14 @@
 <section id = "story-banner">
     <div class = "container">
      <div class = "text-center">
-       <h1>Our Story</h1>
+       <h1 class = "text-light">Our Story</h1>
      </div>
     </div>
    </section>
 <!--------------Our Story banner End------------->
 <hr class = "section_hr">
 <!--------------Our Story Section1 Start------------->
-<section id = "story-section1">
+<section id = "story-section1" class = "inner_sec1">
     <div class ="container">
         <div class = "box text-center">
              <h2>Wo We Are</h2>
@@ -47,9 +47,9 @@
 <section id = "story-section3">
     <div class = "container">
         <div class = "box text-center">
-            <h2>Forever inspired</h2>
-            <p>We are inspired by natural materials, architecture, artistic expression and the colors and shapes of Morocco. The results are rugs that meld the ancient and the contemporary.</p>
-            <button type = "button" class = "btn blue-btn" routerLink = "/products">Get Inspired</button>
+            <h2  class = "text-light">Forever inspired</h2>
+            <p  class = "text-light">We are inspired by natural materials, architecture, artistic expression and the colors and shapes of Morocco. The results are rugs that meld the ancient and the contemporary.</p>
+            <button type = "button" class = "btn blue-btn text-light" routerLink = "/products">Get Inspired</button>
         </div>
     </div>
 </section>
@@ -63,7 +63,7 @@
             <div class = "col1">
                <h2>Dedication to design</h2>
                <p>Our designs take their cues from many sources, including natural forms, abstract paintings of the modern art movement, patterns in traditional zelig tile work, stunning landscapes of the Atlas Mountains.</p>
-               <button type="button" class = "btn blue-btn" routerLink = "/products">Shop Rug</button> 
+               <button type="button" class = "btn blue-btn ms-0" routerLink = "/products">Shop Rug</button> 
            </div>    
         </div>
          <div class = "col-lg-6 col-12">
