--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -204,7 +204,7 @@
 
         </div>
       </div>
-      <nav class = "pt-3">
+      <nav class = "pt-4 mt-4">
         <div class="nav nav-tabs gap-2" id="nav-tab" role="tablist">
           <button class="nav-link active" id="nav-materials-tab" data-bs-toggle="tab" data-bs-target="#nav-materials"
             type="button" role="tab" aria-controls="materials" aria-selected="true">Materials</button>
