--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -2,9 +2,9 @@
 <section id = "apartment-banner">
     <div class = "container">
       <div class = "text-center">
-        <h1 class = "mb-0">The Apartment, NYC</h1>
-        <h6 class = "mb-0">Beni in a brownstone. Let’s meet by the fireplace to chat rug design, review color and construction samples, and answer any questions.</h6>
-        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Request Appointment</button>  
+        <h1 class = "mb-0 text-light">The Apartment, NYC</h1>
+        <h6 class = "mb-0 text-light">Beni in a brownstone. Let’s meet by the fireplace to chat rug design, review color and construction samples, and answer any questions.</h6>
+        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>  
     </div>
     </div>
 </section>
@@ -12,7 +12,7 @@
 
 <!----------------(studio-section1 Start)---------------->
 <hr class = "section_hr">
-<section id = "apartment-section1">
+<section id = "apartment-section1" class = "inner_sec1">
     <div class = "container">
       <div class = "text-center box">
         <h2 class = "mb-4">Bringing Morocco to the city.</h2>
@@ -28,13 +28,13 @@
     <div class = "container">
         <div class = "row flex-column-reverse flex-lg-row flex-md-row">
             <div class = "col-lg-6 col-12">
-            <div class = "apartment-img">
+            <div class = "visit-img">
                 <img src = "assets/img/visit/apartment1.jpg" width="100%"  alt = "img">
             </div>
         </div>
        <div class = "col-lg-6 col-12 ">
-          <div class = "col2">
-              <h2>It’s in the details</h2>
+          <div class = "col2 text-start">
+              <h2 class = "text-capitalize">It’s in the details</h2>
               <p>King worked with us to incorporate our Moroccan roots into the design, including a centrally-placed handcrafted pendant light handmade in Marrakech, and shelves scattered with ceramics and objects sourced through local potters and artisans.</p>
           </div>
        </div>
@@ -49,18 +49,18 @@
     <div class = "container">
      <div class = "row">
        <div class = "col-lg-6 col-12">
-        <div class = "col2">
-            <h2>A Leafy Tree</h2>
+        <div class = "col2 text-lg-end text-start">
+            <h2 class = "text-capitalize">A Leafy Tree</h2>
             <p>A leafy tree placed in the apartment’s original, leaded glass bay windows echoes the ancient olive tree at the center of the Beni Morocco Studio. Vintage finds throughout the space reflect the team’s deep appreciation of global design and craftsmanship.</p>
         </div>
      </div>
      <div class = "col-lg-6 col-12">
-        <div class = "apartment-img">
+        <div class = "visit-img">
             <img src = "assets/img/visit/apartment2.jpg" width="100%"  alt = "img">
         </div>
     </div>
-     </div>
-    </div>
+  </div>
+</div>
 </section>
 <!----------------(Apartmentstudio-section4 End)------------------>
 <hr class = "section_hr">
@@ -86,7 +86,7 @@
         </div>
      </div>
      <div class = "col-lg-6 col-12">
-        <div class = "apartment-img">
+        <div class = "visit-img">
             <div class ="opacity"></div>
             <img src = "assets/img/visit/apartment3.jpg" width="100%" alt = "img">
         </div>
@@ -108,7 +108,7 @@
     <div class = "container">
      <div class = "row">
      <div class = "col-lg-6 col-12">
-        <div class = "apartment-img">
+        <div class = "visit-img1">
           
             <img src = "assets/img/visit/studio-banner1.jpg" width="100%">
         </div>
@@ -126,10 +126,8 @@
 <!----------------(Studio-section8 Start)---------------->
 <hr class = "section_hr">
 
-
-  
   <!-- Request Appointment Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="requestModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class = "p-0 text-end">
@@ -143,7 +141,7 @@
         </div>
         <div class="modal-body">
             <div class = "text-center">
-                <h2  id="exampleModalLabel">Request an Appointment</h2>
+                <h3>Request an Appointment</h3>
                 <h6>See Beni for yourself</h6>
             </div>
             <div class ="row request_checkbox mt-4">
