--- a/src/app/page/visit-us/the-apartment/the-apartment.component.scss
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.scss
@@ -1,22 +1,6 @@
 /****========Comman CSS==========***/
-p{
-    font-size: 18px;
-    line-height: 28px;
-}
-
-h2{
-    &:after{
-        content: "";
-        position: relative;
-        display: block;
-        width: 40px;
-        height: 3px;
-        background: #627b80;
-        bottom: 0;
-        text-align: center;
-        margin-top: 10px;
-    }
-}
+p{font-size: 18px;line-height: 28px;}
+h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px;background: #627b80;bottom: 0;text-align: center;margin-top: 10px;}}
 /*********===========Visit Us(apartment) SCSS===========******/
 #apartment-banner{
 	padding-top: 10rem;
@@ -26,76 +10,30 @@ h2{
     background-size: cover;
 	background-position: center;
 	animation: change 20s infinite ease-in-out;
-	
-
 	@keyframes change {
 		0%{
 			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner1.jpg");
 		}
-		25%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner2.jpg");
-		}
 		50%{
 			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner3.jpg");
-		}
-		75%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner4.jpg");
 		}
 		100%{
 			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner5.jpg");
 		}
-		
-	}
-
-	.container {
+    }
+    .container {
 		max-width: 700px !important;
 		width: 100%;
-	}
-	h1 {
-		color: #fff;
-	}
-	h6 {
-		color: #fff;
-        padding-top: 1rem;
-        padding-bottom:1rem;
-	}
-	button {
-		padding: 0.8rem;
-		width: 280px !important;
-	}
+        h6 {
+            padding: 1rem 0rem;
+        }
+        button {
+            padding: 0.8rem;
+            width: 280px !important;
+        }
+	}	
 }
 /******apartment section1******/
-#apartment-section1{
-	background: linear-gradient(180deg ,#e7e3dc 50% , #fff 0);
-
-	&:hover{
-		background: linear-gradient(180deg ,#fff 50% , #e7e3dc 0);
-		.container{
-			.box{
-				background: linear-gradient(180deg, #e7e3dc 50% , #fff 0 );
-			}
-		}
-		
-	}
-	
-	.container{
-		max-width: 700px !important;
-		width: 100%;
-
-		.box{
-			background: linear-gradient(180deg, #fff 50% , #e7e3dc 0 );
-            padding: 3rem;
-
-            h2{
-                text-transform: capitalize;
-                &:after{  
-                    left: calc(48% - 20px);
-                }
-            }
-
-		}
-	}
-}
 
 /******apartment section2******/
 #apartment-section2{
@@ -103,74 +41,16 @@ h2{
     .col2{
       padding-top: 10rem;
       padding-left: 2rem;
-
       p{
         padding-top: 1rem;
       }
-
-      h2{
-		text-transform: capitalize;
-	}
-    }
-	
-
-    .apartment-img{
-        overflow: hidden;
-        position: relative;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-           
-        }
-    
-        &:before{
-            content: "";
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg,rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.6) 50%);
-            position: absolute;
-            top: -100%;
-            left: 50%;
-            opacity: 0;
-            transform: translateX(-50%) rotate(45deg);
-            transition: all 0.3s steps(4);
-        }
-    
-        &:after{
-            content: "";
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg,rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.6) 50%);
-            position: absolute;
-            top: -100%;
-            left: 50%;
-            opacity: 0;
-            transform: translateX(-50%) rotate(45deg);
-            transition: all 0.3s steps(4);
-        }
-    
-        &:hover{
-            &:before{
-                top: -70%;
-                opacity: 1;
-            }
-    
-            &:after{
-                top: 70%;
-                opacity: 1;
-            }
-        }
-    }
-
-    
+     }   
 }
 
 /******apartment section4******/
 
 #apartment-section3{
 	background:linear-gradient(154deg, #fff 50%, #e7e3dc 0);
-
 	.col2{
 		padding-top: 10rem;
         text-align: right;
@@ -178,174 +58,62 @@ h2{
         p{
             padding-top: 1rem;
         }
-
         h2{
             text-transform: capitalize;
             &:after{
                 left: calc(100% - 45px);
             }	
         }
-    
 	}
-			
-	
-	.apartment-img{
-        overflow: hidden;
-        position: relative;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-           
-        }
-    
-        &:before{
-            content: "";
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg,rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.6) 50%);
-            position: absolute;
-            top: -100%;
-            left: 50%;
-            opacity: 0;
-            transform: translateX(-50%) rotate(45deg);
-            transition: all 0.3s steps(4);
-        }
-    
-        &:after{
-            content: "";
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg,rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.6) 50%);
-            position: absolute;
-            top: -100%;
-            left: 50%;
-            opacity: 0;
-            transform: translateX(-50%) rotate(45deg);
-            transition: all 0.3s steps(4);
-        }
-    
-        &:hover{
-            &:before{
-                top: -70%;
-                opacity: 1;
-            }
-    
-            &:after{
-                top: 70%;
-                opacity: 1;
-            }
-        }
-    }
-
 }
-
-
 /******Apartment section6******/
 #apartment-section4{
     .container{
         max-width: 700px !important;
-    }
-
-    h6{
-        display: inline-block;
-        &:before{
-            content: "";
-            position: relative;
-            display: block;
-            width: 40px;
-            height: 2px;
-            background: #627b80;
-            bottom: -11px;
-            text-align: center;
-            margin-top: 10px;
-            left: -48px;
+        h6{
+            display: inline-block;
+            &:before{
+                content: "";
+                position: relative;
+                display: block;
+                width: 40px;
+                height: 2px;
+                background: #627b80;
+                bottom: -11px;
+                text-align: center;
+                margin-top: 10px;
+                left: -48px;
+            }
+            &:after{
+                content: "";
+                position: relative;
+                display: block;
+                width: 40px;
+                height: 2px;
+                background: #627b80;
+                top: -21px;
+                text-align: center;
+                margin-top: 10px;
+                right: -90px;
+            }
         }
-
-        &:after{
-            content: "";
-            position: relative;
-            display: block;
-            width: 40px;
-            height: 2px;
-            background: #627b80;
-            top: -21px;
-            text-align: center;
-            margin-top: 10px;
-            right: -90px;
-        }
-    }
+    } 
 }
-
 /******Apartment section6******/
 #apartment-section5{
 	background:#f6f5f3;
-
 	.col2{
 		padding-top: 10rem;
         text-align: center;
         h2{
-            text-transform: capitalize;
             &:after{
-                left: calc(48% - 20px);
-                
+                left: calc(48% - 20px);  
             }	
         }
         p{
             padding-top: 1rem;
         }
 	}
-			
-	
-	.apartment-img{
-        overflow: hidden;
-        position: relative;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-           
-        }
-    
-        &:before{
-            content: "";
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg,rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.6) 50%);
-            position: absolute;
-            top: -100%;
-            left: 50%;
-            opacity: 0;
-            transform: translateX(-50%) rotate(45deg);
-            transition: all 0.3s steps(4);
-        }
-    
-        &:after{
-            content: "";
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg,rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.6) 50%);
-            position: absolute;
-            top: -100%;
-            left: 50%;
-            opacity: 0;
-            transform: translateX(-50%) rotate(45deg);
-            transition: all 0.3s steps(4);
-        }
-    
-        &:hover{
-            &:before{
-                top: -70%;
-                opacity: 1;
-            }
-    
-            &:after{
-                top: 70%;
-                opacity: 1;
-            }
-        }
-    }
-
 }
 /********Apartment section5********/
 #apartment-section6{
@@ -359,207 +127,16 @@ h2{
 	background:#f0f0f0;
 	
 	.col2{
-		padding-top: 8rem;
-        padding-left: 2rem;
         p{
             padding-top:1rem;
         }
-        h2{
-            text-transform: capitalize;    
-        }
 	}
-	
-	
 	button{
 		width: 300px;
 		padding:2rem 1rem;
 		margin-left: 0rem;
 	  }
-    
-      .apartment-img{
-		text-align: center;
-		overflow: hidden;
-		position: relative;
-
-		&:before{
-			content: "";
-			width: 100%;
-			height: 100%;
-			background: rgba(0, 0, 0, 0.1);
-			background-image: linear-gradient(45deg, transparent 0%, #627b808c 100%);
-			background-size: 33.33% 33.33%;
-			position: absolute;
-			top: 0;
-			left: 50%;
-			opacity: 0;
-			transform: translateX(-50%) scale(0);
-			transition: transform 0.5s cubic-bezier(0.815, 1.650, 0.400, 0.680);
-		}
-
-		&:hover:before{
-			opacity: 1;
-			transform: translateX(-50%) scale(1);
-		}
-
-		img{
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-		
-	}
 }
-
-/******Request Modal SCSS****/
-.modal-content{
-    background-color:  #f6f5f3;
-
-    .modal-body{
-      height: 450px;
-      overflow-y: scroll;
-        &::-webkit-scrollbar-track
-      {
-	      -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.2);
-			border-radius: 10px;
-			background-color: #e7e3dc;
-       }
-
- &::-webkit-scrollbar
-    {
-       width: 12px;
-       background-color: #e7e3dc;
-    }
-
-&::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-color: #627b80;
-}
-        h2{
-            &:after{
-                left: calc(50% - 20px);
-            }
-        }
-        [type="radio"] {
-            &:checked {
-                position: absolute;
-                left: -9999px;
-                + {
-                    label {
-                        position: relative;
-                        padding-left: 35px;
-                        cursor: pointer;
-                        line-height: 26px;
-                        display: inline-block;
-                        color: #000;
-                        &:before {
-                            content: "";
-                            position: absolute;
-                            left: 0;
-                            top: 0;
-                            width: 25px;
-                            height: 25px;
-                            border: 1px solid #000;
-                            background: #fff;
-                        }
-                        &:after {
-                            content: " ";
-                            position: absolute;
-                            left: 9px;
-                            top: 4px;
-                            width: 8px;
-                            height: 15px;
-                            border: solid #627b80;
-                            border-width: 0 3px 3px 0;
-                            transform: rotate(50deg) !important;
-                            opacity: 1;
-                            transform: scale(1);
-                        }
-                    }
-                }
-            }
-            &:not(:checked) {
-                position: absolute;
-                left: -9999px;
-                + {
-                    label {
-                        position: relative;
-                        padding-left: 35px;
-                        cursor: pointer;
-                        line-height: 26px;
-                        display: inline-block;
-                        color: #000;
-                        &:before {
-                            content: '';
-                            content: "";
-                            position: absolute;
-                            left: 0;
-                            top: 0;
-                            width: 25px;
-                            height: 25px;
-                            border: 1px solid #000;
-                            background: #fff;
-                        }
-                        &:after {
-                            content: '';
-                            position: absolute;
-                            left: 9px;
-                            top: 4px;
-                            width: 8px;
-                            height: 15px;
-                            border: solid #627b80;
-                            border-width: 0 3px 3px 0;
-                            transform: rotate(50deg) !important;
-                            opacity: 0;
-                            -webkit-transform: scale(0);
-                            transform: scale(0);
-                        }
-                    }
-                }
-            }
-        }
-        .request_checkbox{
-            padding:0rem 1rem;
-        }
-
-        .request_form{
-            padding:0rem 1rem;
-        }
-    
-        form {
-            .form-label{
-                margin-bottom: 0.3rem;
-            }
-            input{
-                height: 40px;
-            
-            }
-
-            button{
-                padding: 1rem;
-
-                &:hover{
-                    transform: translateX(10px);
-                }
-            }
-        }
-    
-    }
-
-    p{
-        
-        a{
-            text-decoration: underline;
-            font-weight: 600;
-            
-        }
-    }
-
-
-}
-
-
-
 
 /**==========++++++(Responsive SCSS)++++++++++============*/
 @media(max-width:991px) {
@@ -570,10 +147,7 @@ h2{
    }
     #apartment-section2{
         .col2{
-            padding-top: 0rem;
-            text-align: left;
-            padding-left: 0rem;
-    
+            padding: 0rem;
             h2{
                 &:after{
                     left: 0;
