--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -2,9 +2,9 @@
 <section id = "studio-banner">
     <div class = "container">
       <div class = "text-center">
-        <h1 class = "mb-0">The Studio, Marrakech</h1>
-        <h6 class = " mb-0">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
-        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Request Appointment</button>  
+        <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
+        <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
+        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>  
     </div>
     </div>
 </section>
@@ -12,10 +12,10 @@
 
 <!----------------(studio-section1 Start)---------------->
 <hr class = "section_hr">
-<section id = "studio-section1">
+<section id = "studio-section1" class = "inner_sec1">
     <div class = "container">
       <div class = "text-center box">
-        <h2 class = "mb-4">The Beni Experience.</h2>
+        <h2 class = "mb-4 text-capitalize">The Beni Experience.</h2>
         <p>Two years after launching this digital home of Beni Rugs, we broke ground on an 8,000 square foot studio in Tameslouht, Morocco. The studio - which houses our design HQ, rug showroom, and our team of incredible Berber women who weave the brand’s creations - is situated on the Route to Amizmiz, an emerging design enclave twenty minutes south of the bustling city of Marrakech.</p>  
     </div>
     </div>
@@ -27,16 +27,15 @@
     <div class = "container">
      <div class = "row">
        <div class = "col-lg-6 col-12 ">
-          <div class = "col1">
-              <h2>A new way to shop</h2>
+          <div class = "col1 text-lg-end text-start">
+              <h2 class = "text-capitalize">A new way to shop</h2>
               <p>The studio aims to modernize the traditional set-up of shopping handcrafted Moroccan rugs within the city’s markets. Here, our rugs are displayed on sleek modular rack systems, and an immense selection of yarns and color swatches inspire customization.</p>
           </div>
        </div>
        <div class = "col-lg-6 col-12">
-           <div  class = "studio-img">
+           <div  class = "visit-img">
                <img src = "assets/img/visit/sec2.jpg" width="100%">
            </div>
-
        </div>
      </div>
     </div>
@@ -47,15 +46,15 @@
 <section id = "studio-section3">
     <div class = "container">
         <div class = "text-center">
-           <h2>What to Expect</h2>
+           <h2 class="text-capitalize" >What to Expect</h2>
         </div>
         <div class  ="row pt-4">
             <div class = "col-lg-3 col-md-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card1.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6>We’ll provide the ride</h6>
-                        <p>Private transfer from Marrakech to the studio is available, where guests are greeted by the team and given a personal tour.</p>
+                        <h6 class = "text-light">We’ll provide the ride</h6>
+                        <p class = "text-light">Private transfer from Marrakech to the studio is available, where guests are greeted by the team and given a personal tour.</p>
                     </div>
                 </div>
             </div>
@@ -63,8 +62,8 @@
                 <div class="card">
                     <img src="assets/img/visit/sec3-card2.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6>See our looms in action.</h6>
-                        <p>An open air courtyard that’s centered around a 150 year old olive tree allows for a full view of the 50+ looms at work.</p>
+                        <h6 class = "text-light">See our looms in action.</h6>
+                        <p class = "text-light">An open air courtyard that’s centered around a 150 year old olive tree allows for a full view of the 50+ looms at work.</p>
                     </div>
                 </div>
             </div>
@@ -72,8 +71,8 @@
                 <div class="card">
                     <img src="assets/img/visit/sec3-card3.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6>Discover the craft of Morocco.</h6>
-                        <p>Enjoy an espresso at the bar while browsing pieces from local artisans and artists alongside our favorite Morocco-based brands.</p>
+                        <h6 class = "text-light">Discover the craft of Morocco.</h6>
+                        <p class = "text-light">Enjoy an espresso at the bar while browsing pieces from local artisans and artists alongside our favorite Morocco-based brands.</p>
                     </div>
                 </div>
             </div>
@@ -81,14 +80,12 @@
                 <div class="card">
                     <img src="assets/img/visit/sec3-card4.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6>Design your perfect rug with us.</h6>
-                        <p>Feel the difference for yourself. Explore our construction types, review color samples, and pick your perfect design.</p>
+                        <h6 class = "text-light">Design your perfect rug with us.</h6>
+                        <p class = "text-light">Feel the difference for yourself. Explore our construction types, review color samples, and pick your perfect design.</p>
                     </div>
                 </div>
-            </div>
-            
-        </div>
-
+            </div> 
+          </div>
     </div>
 </section>
 <!----------------(studio-section4 End)------------------>
@@ -99,13 +96,13 @@
     <div class = "container">
      <div class = "row flex-column-reverse flex-lg-row flex-md-row">
        <div class = "col-lg-6 col-12">
-           <div class = "studio-img">
+           <div class = "visit-img">
                <img src = "assets/img/visit/sec4-img.jpg" width="100%">
            </div>
        </div>
        <div class = "col-lg-6 col-12 ">
         <div class = "col2">
-            <h2>Our team</h2>
+            <h2 class = "text-capitalize">Our team</h2>
             <p>The Beni weaving team is compensated with above market rates alongside benefits such as childcare and transportation to work. We are proud to support and protect this ancient craft while evolving the compensation model for weavers in Morocco.</p>
         </div>
      </div>
@@ -122,13 +119,13 @@
      <div class = "row">
      
        <div class = "col-lg-6 col-12">
-        <div class = "col2">
-            <h2>The operation</h2>
+        <div class = "col1 text-lg-end text-start">
+            <h2 class = "text-capitalize">The operation</h2>
             <p>After each rug is finished on the loom, it’s washed and dried up to 5 times. Normally, this process is quite water-intensive. The Studio employs a water recapture system to ensure that as much water is collected, filtered, and reused as possible to minimize our environmental footprint.</p>
         </div>
      </div>
      <div class = "col-lg-6 col-12">
-        <div class = "studio-img">
+        <div class = "visit-img">
             <img src = "assets/img/visit/sec5-img.jpg" width="100%">
         </div>
     </div>
@@ -152,7 +149,7 @@
 <section id = "studio-slider">
     <div class = "container">
         <div class = "text-center">
-            <h2>
+            <h2 class = "text-capitalize">
                 View the Gallery
             </h2>
         </div>
@@ -260,13 +257,13 @@
     <div class = "container">
      <div class = "row">
      <div class = "col-lg-6 col-12">
-        <div class = "studio-img">
+        <div class = "visit-img1">
             <img src = "assets/img/visit/apartment.jpg" width="100%">
         </div>
     </div>
     <div class = "col-lg-6 col-12 ">
         <div class = "col2">
-            <h2>Visit Us in NYC</h2>
+            <h2 class = "text-capitalize">Visit Us in NYC</h2>
             <p class = "pt-3">Beni in a brownstone. Let’s meet by the fireplace to chat rug design, review color and construction samples, and answer any questions.</p>
            <button type = "button" class = "btn blue-btn" routerLink = "/visit/apartment">Explore the Apartment</button>
         </div>
@@ -278,7 +275,7 @@
 <hr class = "section_hr">
 
  <!-- Request Appointment Modal -->
- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ <div class="modal fade" id="requestModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class = "p-0 text-end">
@@ -292,10 +289,10 @@
       </div>
       <div class="modal-body">
           <div class = "text-center">
-              <h2  id="exampleModalLabel">Request an Appointment</h2>
+              <h3>Request an Appointment</h3>
               <h6>See Beni for yourself</h6>
           </div>
-          <div class ="row request_checkbox mt-4">
+          <div class ="row request_checkbox radio_checkbox mt-4">
               <div class = "col-6">
                     <div>
                       <input type="radio" id="test1" name="radio-group" checked>
