--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -49,7 +49,7 @@
     <div class="row pt-3">
       <div class="col-md-12">
         <div class="row">
-          <div class="col-lg-3 col-md-3 col12" *ngFor="let product of product">
+          <div class="col-lg-3 col-md-6 col-sm-6 col12" *ngFor="let product of product">
             <a [routerLink]="['/product-detail', product.id]">
               <div class = "card card-body p-0">
                 <div class="content-overlay"></div>
