--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -35,6 +35,9 @@
                 <a routerLink = "/our-process" class = "nav-link">Our Process</a>
               </li>
               <li class = "nav-item">
+                <a routerLink = "/our-story" class = "nav-link">Our Story</a>
+              </li>
+              <li class = "nav-item">
                 <a routerLink = "contact" class = "nav-link">Contact Us</a>
               </li>
             </ul>
@@ -48,13 +51,16 @@
                 <a [routerLink]="['pages', supportLinks.seo_title]" class = "nav-link">{{supportLinks.title}}</a>
                 </li>  -->
               <li class = "nav-item">
-                <a routerLink = "/our-story" class = "nav-link">Our Story</a>
+                <a routerLink = "/swatches" class = "nav-link">Swatches</a>
               </li>
               <li class = "nav-item">
-                <a href = "#" class = "nav-link">Career</a>
+                <a routerLink = "/size-guide" class = "nav-link">Size Guide</a>
               </li>
               <li class = "nav-item">
-                <a routerLink = "/terms-and-conditions"href = "#" class = "nav-link">Terms & Conditions</a>
+                <a routerLink = "/gift-card" class = "nav-link">Gift Card</a>
+              </li>
+              <li class = "nav-item">
+                <a routerLink = "/terms-and-conditions" class = "nav-link">Terms & Conditions</a>
               </li>
               <li class = "nav-item">
                 <a routerLink = "/faqs" class = "nav-link">FAQs</a>
