--- a/src/app/page/visit-us/the-apartment/the-apartment.component.scss
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.scss
@@ -127,6 +127,7 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
 	background:#f0f0f0;
 	
 	.col2{
+        padding:8rem 0rem 0rem 2rem;
         p{
             padding-top:1rem;
         }
