--- a/src/styles.scss
+++ b/src/styles.scss
@@ -529,9 +529,6 @@ hr{
                 display: none;
 				z-index: 1;
 				padding:0.5rem !important;
-
-				
-				
 				li{
 					clear: both;
                     width: 100%;
@@ -569,6 +566,7 @@ hr{
 			.nav-link {
 				font-weight: 600;
 				font-size: 14px;
+				padding: 0.3rem 0rem;
 				&:hover {
 					color: #627b80 !important;
 				}
@@ -694,7 +692,7 @@ hr{
 			&:before {
 				background-color: rgba(255, 255, 255, .2);
 				right: 50%;
-				left: 51%;
+				left: 50%;
 			}
 		}
 	}
