--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -209,7 +209,7 @@
                                      </label>
                                 </li> -->
                                 <li>
-                                 <label class="check_box ">Cash On Delivery
+                                 <label class="check_box ">Pay with Mollie
                                      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
                                         <input type="radio" checked name="radio">
                                          <span class="checkmark"></span>
