--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -13,7 +13,7 @@
     </div>
   </section>
   <!----------Breadcrumb end---------->
- 
+
   <!---------Cart Section--------->
 <section id = "cart-section">
    <div class = "container">
@@ -36,7 +36,7 @@
                             </td>
                             <td class = "text-center"><div class = "product-quantity">
                               <button type="button" class = "minus" (click)="minus(cart.id, cart.price)">-</button>
-                              <input type="text" #quantity>{{cart.stock}}
+                              <input type="text" #quantity class="cartqty" value="{{cart.stock}}">
                              <button type = "button" (click)="plus(cart.id, cart.price)">+</button>
                             </div></td>
                             <td class = "text-center"><h5>${{cart.price*cart.stock}}</h5></td>
