--- a/src/app/page/gift-card/gift-card.component.html
+++ b/src/app/page/gift-card/gift-card.component.html
@@ -1,5 +1,5 @@
 <!-----Section1 Start----->
-<section id = "swatch-section1">
+<section id = "gift-section1">
     <div class = "container">
       <div class = "row">
           <div class = "col-lg-7 col-12">
@@ -36,7 +36,7 @@
   <!-----Section1 End----->
   <hr class = "section_hr">
   <!-----Section2 Start----->
-  <section id = "swatch-section2">
+  <section id = "gift-section2">
       <div class = "container">
         <div class = "row">
             
@@ -59,7 +59,7 @@
   <!-----Section2 End----->
   <hr class = "section_hr">
   <!-----Section3 Start----->
-  <section id = "swatch-section3">
+  <section id = "gift-section3">
       <div class = "container">
         <div class = "row">
           <div class = "col-3">
@@ -100,7 +100,7 @@
   <!-----Section3 End----->
   <hr class = "section_hr">
   <!-----Section4 Start----->
-  <section id = "swatch-slider">
+  <section id = "gift-slider">
     <div class = "container">
       <div class = "row">
         <div class = "col-3">
@@ -173,7 +173,7 @@
   <!-----Section4 End----->
   <hr class = "section_hr">
   <!-----Section5 Start----->
-  <section class = "swatch-section5">
+  <section class = "gift-section5">
     <div class = "container">
     <video autoplay muted loop id="myVideo" width="100%">
         <source src="assets/video/our-process.mp4" type="video/mp4" width = >  
