--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -40,6 +40,9 @@
               <li class = "nav-item">
                 <a routerLink = "contact" class = "nav-link">Contact Us</a>
               </li>
+              <li class = "nav-item">
+                <a routerLink = "/swatches" class = "nav-link">Swatches</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -51,13 +54,16 @@
                 <a [routerLink]="['pages', supportLinks.seo_title]" class = "nav-link">{{supportLinks.title}}</a>
                 </li>  -->
               <li class = "nav-item">
-                <a routerLink = "/swatches" class = "nav-link">Swatches</a>
+                <a routerLink = "/return" class = "nav-link">Return</a>
               </li>
               <li class = "nav-item">
                 <a routerLink = "/size-guide" class = "nav-link">Size Guide</a>
               </li>
               <li class = "nav-item">
                 <a routerLink = "/gift-card" class = "nav-link">Gift Card</a>
+              </li>
+              <li class = "nav-item">
+                <a routerLink = "/size-guide" class = "nav-link">Trade Program</a>
               </li>
               <li class = "nav-item">
                 <a routerLink = "/terms-and-conditions" class = "nav-link">Terms & Conditions</a>
