--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -63,7 +63,7 @@
                 <a routerLink = "/gift-card" class = "nav-link">Gift Card</a>
               </li>
               <li class = "nav-item">
-                <a routerLink = "/size-guide" class = "nav-link">Trade Program</a>
+                <a routerLink = "/trade-program" class = "nav-link">Trade Program</a>
               </li>
               <li class = "nav-item">
                 <a routerLink = "/terms-and-conditions" class = "nav-link">Terms & Conditions</a>
