--- a/src/app/page/trade-program/trade-program.component.html
+++ b/src/app/page/trade-program/trade-program.component.html
@@ -72,7 +72,7 @@
 <!---------Section1  End---------->
 <hr class = "section_hr">
 <!---------Section2  start---------->
-<section>
+<!--<section>
 <div class = "container">
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
@@ -113,5 +113,5 @@
     </div>
   </div>
 </div>
-</section>
+</section>  -->
 <!---------Section2  End---------->
