--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -38,7 +38,7 @@
                 <a routerLink = "/our-story" class = "nav-link">Our Story</a>
               </li>
               <li class = "nav-item">
-                <a routerLink = "contact" class = "nav-link">Contact Us</a>
+                <a routerLink = "/contact" class = "nav-link">Contact Us</a>
               </li>
               <li class = "nav-item">
                 <a routerLink = "/swatches" class = "nav-link">Swatches</a>
@@ -63,7 +63,7 @@
                 <a routerLink = "/gift-card" class = "nav-link">Gift Card</a>
               </li>
               <li class = "nav-item">
-                <a routerLink = "/trade-program" class = "nav-link">Trade Program</a>
+                <a routerLink = "/trade-prog" class = "nav-link">Trade Program</a>
               </li>
               <li class = "nav-item">
                 <a routerLink = "/terms-and-conditions" class = "nav-link">Terms & Conditions</a>
