--- a/src/app/page/return/return.component.html
+++ b/src/app/page/return/return.component.html
@@ -1,1 +1,26 @@
-<p>return works!</p>
+
+<!--------------Product List banner Start------------->
+<section id = "return_banner">
+    <div class = "container">
+     <div class = "text-center">
+       <h1 class = "text-light">Return</h1>
+     </div>
+    </div>
+</section>
+<!--------------Product List banner End------------->
+<section id = "return-section1">
+   <div class = "container">
+       <div>
+           <h6>Can I return my rug?</h6>
+           <p>All orders are final and we cannot accept returns. Please ensure all measurements, colors, and design are correct before submitting your order!</p>
+       </div>
+       <div>
+        <h6>Can I cancel my order?</h6>
+        <p>After placing an order, you have until 7:00 PM ET the following day to cancel and get your money back.</p>
+    </div>
+    <div>
+        <h6>What if I don't like what I ordered?</h6>
+        <p>We certainly hope that never happens! We're here to answer whatever questions you've got before you place an order to ensure you're 100% happy with your one-of-a-kind design.</p>
+    </div>
+   </div>
+</section>
