--- a/src/app/page/trade-program/trade-program.component.html
+++ b/src/app/page/trade-program/trade-program.component.html
@@ -72,46 +72,73 @@
 <!---------Section1  End---------->
 <hr class = "section_hr">
 <!---------Section2  start---------->
-<!--<section>
+<section id = "trade-section2">
 <div class = "container">
+  <div class ="text-center mb-4">
+      <h2>FAQ</h2>
+  </div>
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <div class="accordion-header" id="headingOne">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Accordion Item #1
+          <h6>What is the Beni trade program?</h6>
         </button>
        </div>
       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+         <p>The Beni trade program was created to ensure that we offer the highest level of service to design professionals who love hand crafted Moroccan rugs. With exclusive discounts and custom design services, our team is here help.</p>
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <div class="accordion-header" id="headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Accordion Item #2
+          <h6>Who can join the Beni trade program?</h6>
         </button>
     </div>
       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+           <p>Accredited interior designers, architects, creative studios, and hospitality owners are all welcome here.</p>
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <div class="accordion-header" id="headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Accordion Item #3
+          <h6>How do I start using my discount?</h6>
         </button>
     </div>
       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <p>We'll provide you with a unique discount code upon approval. That way you can checkout directly through our website. Or, if you prefer, we're also happy to work directly with you to plan and place orders.</p>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <div class="accordion-header" id="headingFour">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          <h6>How long is my membership valid?</h6>
+        </button>
+    </div>
+      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <p>We evaluate all members of our trade program on an annual basis.</p>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <div class="accordion-header" id="headingFive">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+          <h6>Do you offer a program for large-scale purchases?</h6>
+        </button>
+    </div>
+      <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <p>For large-scale purchases, please email us at <a href = "#">bonjour@benirugs.com</a></p>
         </div>
       </div>
     </div>
   </div>
 </div>
-</section>  -->
+</section>
 <!---------Section2  End---------->
