--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -210,11 +210,18 @@
                                 </li> -->
                                 <li>
                                  <label class="check_box ">Pay with Mollie
-                                     <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-                                        <input type="radio" checked name="radio">
+                                  <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                        <input type="radio" checked name="payment_type" value="1">
                                          <span class="checkmark"></span>
                                     </label>
                                 </li>
+                                <!-- <li>
+                                  <label class="check_box ">Cash on Delivery
+                                      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                         <input type="radio" name="payment_type" value="0" (click)="payment_method($event)">
+                                          <span class="checkmark"></span>
+                                     </label>
+                                 </li> -->
 
                             </ul>
 
