--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -197,7 +197,7 @@
 
           <!-----Product Variation End---->
           <div class = 'text-center'>
-            <button class = "btn blue-btn" (click)="addtoCart()" [disabled]="!variationValidation">Add to Cart</button>
+            <button class="btn blue-btn" (click)="addtoCart()" [disabled]="!variationValidation">Add to Cart</button>
           </div>
 
         </div>
@@ -328,7 +328,7 @@
            <p class = "py-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente perspiciatis inventore, dicta eligendi dolore neque rem. Suscipit reprehenderit ipsam dicta sequi, deleniti minus itaque sint vitae consequatur, rerum, ratione unde consectetur perferendis eum natus! Distinctio ducimus quis quisquam, nobis dolorem quasi iusto sapiente obcaecati quaerat aperiam tempora perferendis, deleniti iure?</p>
         </div>
         <div class = "text-center">
-          <button class = "btn blue-btn">Request a Swatch</button>
+          <button class = "btn blue-btn" routerLink="/swatches">Request a Swatch</button>
         </div>
       </div>
 
@@ -346,7 +346,7 @@
 
     </div>
     <div class ="text-center">
-      <button type = "button" class = "btn blue-btn">Our Process</button>
+      <button type = "button" class = "btn blue-btn" routerLink="/our-process">Our Process</button>
     </div>
   </div>
 </section>
