--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header *ngIf="showHeaderFooter"></app-header>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
 <app-footer *ngIf="showHeaderFooter"></app-footer>
 <!-----
 <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h1>
